src/objects/ContractSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains the custom settings for Closing Contracts with Commissions</description>
    <fields>
        <fullName>Cash_Rebate_Disclosure__c</fullName>
        <label>Cash Rebate Disclosure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Override_Rate__c</fullName>
        <label>Manager Override Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Commission_Rate__c</fullName>
        <label>Maximum Commission Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Promotion__c</fullName>
        <defaultValue>0.500</defaultValue>
        <label>Maximum Promotion ($/watt)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Commission_Rate__c</fullName>
        <label>Minimum Commission Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Promotion__c</fullName>
        <defaultValue>0.000</defaultValue>
        <label>Minimum Promotion ($/watt)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral_Commission_Bonus__c</fullName>
        <label>Referral Commission Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Commission_Rate__c</fullName>
        <label>Regional Sales Manager Commission Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solarize_Commission_Rate__c</fullName>
        <label>Solarize Commission Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>ContractSettings</label>
</CustomObject>